bookstore-istio-manifests/bookstore-authorization-peer-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authorization-peer
  namespace: bookstore-servicemesh
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["bookstore-servicemesh"]
      to:
        - operation:
            paths:
              - /restful/accounts/*
              - /restful/products*
              - /restful/pay/*
              - /restful/settlements*
            methods: ["GET","POST","PUT","PATCH"]
    - from:
        - source:
            namespaces: ["istio-system"]

#  如果有任何 CUSTOM 策略与请求相匹配，如果评估结果为拒绝，则拒绝该请求。
#  如果有任何 DENY 策略与请求相匹配，则拒绝该请求。
#  如果没有适合该工作负载的 ALLOW 策略，允许该请求。
#  如果有任何 ALLOW 策略与该请求相匹配，允许该请求。
#  拒绝该请求。
